kubernetes/apps/arrs/seerr/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Seerr"
    homepage.shamubernetes.com/description: "Request movies and shows"
    homepage.shamubernetes.com/group: "Media"
    homepage.shamubernetes.com/order: "10"
    homepage.shamubernetes.com/favorite: "true"
    homepage.shamubernetes.com/icon: "dashboard-icons:seerr"
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
    sectionName: https
  hostnames:
  - "requests.${HOME_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: seerr
      port: 80
